--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
 email: 'office@intersecurity-komposch.at'
 phone: '+43 660 77 44 522'
-contact_button_link: 'Kontakt'
+contact_button_link: 'contact'
